feat: integrate Google Gemini GenAI + RNCP documentation
- Add Google Gemini API integration with Speakeasy persona prompt
- Implement JSON cache for API cost optimization
- Add fallback mode when API unavailable
- Document RNCP Bloc 2 technical choices in README
- Add 600 cocktails dataset with semantic descriptions
- Add .env.example for API key configuration

--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,10 @@ pandas>=2.0
 # Visualization
 plotly>=5.18.0
 
+# GenAI - Google Gemini
+google-generativeai>=0.3.0
+python-dotenv>=1.0.0
+
 # Testing
 pytest>=8.0.0
 pytest-playwright>=0.4.0
