--- a/.gitignore
+++ b/.gitignore
@@ -116,6 +116,7 @@ coverage.xml
 test-results/
 playwright-report/
 playwright/.cache/
+.playwright-mcp/
 
 # =============================================================================
 # LOGS & DEBUGGING
@@ -127,6 +128,8 @@ logs/
 debug/
 tmp/
 temp/
+data/analytics.json
+data/recipe_cache.json
 
 # =============================================================================
 # JUPYTER NOTEBOOKS
